<resources>
    <string name="app_name">TMDB Peliculas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TMDB Peliculas y Series</string>
    <string name="nav_header_subtitle">matiasatheiler@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="peliculas">Peliculas</string>
    <string name="buscar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atras">Atrás</string>
    <string name="salir">Salir</string>
    <string name="vertrailer">Ver Trailer</string>
    <string name="populares">Populares</string>
    <string name="masvaloradas">Más Valoradas</string>
    <string name="estrenos">Estrenos</string>
</resources>
