<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.inicio.Inicio">

    <TextView
        android:id="@+id/inicio_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_sc_light"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/inicio_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_video" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inicio_lbl_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sans_sc_light"
                android:text="@string/peliculas"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/inicio_btn_peliculas_mas_valoradas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/masvaloradas" />

            <Button
                android:id="@+id/inicio_btn_peliculas_populares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/populares" />

            <Button
                android:id="@+id/inicio_btn_peliculas_estrenos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/estrenos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inicio_lbl_peliculas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sans_sc_light"
                android:text="Series"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/inicio_btn_series_mas_valoradas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/masvaloradas" />

            <Button
                android:id="@+id/inicio_btn_series_populares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/populares" />

            <Button
                android:id="@+id/inicio_btn_series_estrenos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="Actuales" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>